--- a/src/pages/Rent/components/banner/style.css
+++ b/src/pages/Rent/components/banner/style.css
@@ -1,11 +1,13 @@
 
 .banner-container{ 
     width: 100%;
-    height: 160px;
+
     background-color: #2A3A68;
     border-radius: 12px;
-    padding-top: 35px;
+    padding-top: 34px;
+      padding-bottom: 34px;
     padding-left: 43px;
+     padding-right: 43px;
     margin-top: 10px;
 }
 
@@ -36,7 +38,7 @@ color: #fff;
 white-space: nowrap;       
 overflow: hidden;          
 text-overflow: ellipsis;    
-padding-bottom: 100px;
+
 }
 
 
